* coerce `image-caption-max-width` to `fit-content` if `float` attribute is set on block image (#2150)

Improvements::

* configure spacing around thematic break using `thematic-break-padding` key instead of margin top and bottom (#2164)
* rename `convert_listing_or_literal` to `convert_code` and alias old name
* reify convert handler for STEM blocks (`convert_stem`)

Bug Fixes::

* honor `caption-align` when element align is not `left` and `caption-max-width` is % of element width (e.g., `fit-content(50%)`) (#2156)
* do not orphan sidebar title (#2158)
* allow theme to set font style of first line of abstract to `normal_italic` (#2138)
* add support for `:color` option to `Prawn::Text::Formatted::Box` directly and remove workarounds
* preserve columns on subsequent pages in the index section (#2149)
* fix return value of `cursor` method inside block for column box in index section
* correctly detect preceding code block when determining whether to collapse top margin of colist
* apply bottom margin to thematic break that falls at top of page (#2164)
* allow extended converter to override `convert_code` method to handle `convert_listing` and `convert_literal` calls
* restore margin below pass block
* remove use of deprecated theme keys in default-for-print theme

== 2.0.0.beta.1 (2022-05-04) - @mojavelinux

Enhancements::

* introduce `index-pagenum-sequence-style` document attribute to control style of sequential page numbers in index when media=screen (#1656)
* allow entry for document in outline to be controlled using `outline-title` attribute (#1789)
* allow extended converter to insert or filter toc entries by overriding `get_entries_for_toc` method (#2097)
* add `asciidoctor/pdf/nopngmagick` script to unregister Gmagick handler for PNG images only (#1687)
* allow theme to configure which end the caption is placed for a block image (#2115)
* add `Page#imported` method to mark page as imported (which suppresses running content)